# ohtu-webcounter

./: .gitignore  flake.nix  pyproject.toml
.github/workflows/: robot.yml
src/: app.py  counter.py
src/templates/: index.html
src/tests/: reset.robot  resource.robot  set.robot
